--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <com.svg.SvgImageView
-        android:id="@+id/CRAImageView"
+        android:id="@+id/svgImageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_margin="18dp"
